language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_patterns_does_not_remove_comment_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main(bool: Bool) {\n  case bool {\n    // Here is some comment that should not be deleted\n\n    // Here is some other separate comment!\n    // And loads of white space that has to be deleted.\n\n\n\n\n\n  }\n}\n"
---
----- BEFORE ACTION

pub fn main(bool: Bool) {
  case bool {
  ▔▔▔▔▔↑     
    // Here is some comment that should not be deleted

    // Here is some other separate comment!
    // And loads of white space that has to be deleted.





  }
}


----- AFTER ACTION

pub fn main(bool: Bool) {
  case bool {
    // Here is some comment that should not be deleted

    // Here is some other separate comment!
    // And loads of white space that has to be deleted.
    True -> todo
    False -> todo
  }
}
