language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_patterns_fires_for_second_inexhaustive_case_when_first_does_not_contain_cursor.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn wibble(a: Bool, b: Bool) {\n  case a {}\n  case b {}\n}\n"
---
----- BEFORE ACTION

pub fn wibble(a: Bool, b: Bool) {
  case a {}
  case b {}
  ▔▔▔▔▔↑   
}


----- AFTER ACTION

pub fn wibble(a: Bool, b: Bool) {
  case a {}
  case b {
    True -> todo
    False -> todo
  }
}
