language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_patterns_inline.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main(a: Bool) {\n  let value = case a {}\n}\n"
---
----- BEFORE ACTION

pub fn main(a: Bool) {
  let value = case a {}
              ▔▔▔▔▔↑   
}


----- AFTER ACTION

pub fn main(a: Bool) {
  let value = case a {
    True -> todo
    False -> todo
  }
}
