language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_patterns_multi.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main(a: Bool) {\n  let b = 1\n  case a, b {\n\n  }\n}\n"
---
----- BEFORE ACTION

pub fn main(a: Bool) {
  let b = 1
  case a, b {
  ▔▔▔▔▔▔▔▔↑  

  }
}


----- AFTER ACTION

pub fn main(a: Bool) {
  let b = 1
  case a, b {
    True, _ -> todo
    False, _ -> todo
  }
}
