language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_patterns_multibyte_grapheme.snap
---
source: language-server/src/tests/action.rs
expression: "\n// ä\nfn wibble() {\n  case True {}\n}\n"
---
----- BEFORE ACTION

// ä
fn wibble() {
  case True {}
  ▔▔▔▔▔↑      
}


----- AFTER ACTION

// ä
fn wibble() {
  case True {
    True -> todo
  }
}
