language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_patterns_opaque_type.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport mod\n\npub fn main(w: mod.Wibble) {\n  case w {}\n}\n"
---
----- BEFORE ACTION

import mod

pub fn main(w: mod.Wibble) {
  case w {}
         ↑ 
}


----- AFTER ACTION

import mod

pub fn main(w: mod.Wibble) {
  case w {
    _ -> todo
  }
}
