language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_patterns_tuple.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main(two_at_once: #(Bool, Result(Int, Nil))) {\n  case two_at_once {\n    #(False, Error(_)) -> Nil\n  }\n}\n"
---
----- BEFORE ACTION

pub fn main(two_at_once: #(Bool, Result(Int, Nil))) {
  case two_at_once {
  ▔▔▔▔▔↑            
    #(False, Error(_)) -> Nil
  }
}


----- AFTER ACTION

pub fn main(two_at_once: #(Bool, Result(Int, Nil))) {
  case two_at_once {
    #(False, Error(_)) -> Nil
    #(False, Ok(_)) -> todo
    #(True, _) -> todo
  }
}
