language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_patterns_with_labels.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble {\n  Wibble(integer: Int, float: Float)\n  Wobble(string: String, bool: Bool)\n}\n\npub fn main(w: Wibble) {\n  case w {}\n}\n"
---
----- BEFORE ACTION

pub type Wibble {
  Wibble(integer: Int, float: Float)
  Wobble(string: String, bool: Bool)
}

pub fn main(w: Wibble) {
  case w {}
  ▔▔▔▔▔▔▔↑ 
}


----- AFTER ACTION

pub type Wibble {
  Wibble(integer: Int, float: Float)
  Wobble(string: String, bool: Bool)
}

pub fn main(w: Wibble) {
  case w {
    Wibble(integer:, float:) -> todo
    Wobble(string:, bool:) -> todo
  }
}
