language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_type_parameter_for_single_constructor.snap
---
source: language-server/src/tests/action.rs
expression: "\ntype Wibble {\n  Wibble(field: t)\n}\n"
---
----- BEFORE ACTION

type Wibble {
  Wibble(field: t)
                ↑ 
}


----- AFTER ACTION

type Wibble(t) {
  Wibble(field: t)
}
