language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_type_parameter_preserves_comments.snap
---
source: language-server/src/tests/action.rs
expression: "\ntype Wibble(\n  // Comment 1\n  b,\n  // Comment 2\n) {\n  Wibble(a, b, c)\n}\n"
---
----- BEFORE ACTION

type Wibble(
  // Comment 1
  b,
  // Comment 2
) {
  Wibble(a, b, c)
               ↑ 
}


----- AFTER ACTION

type Wibble(a, 
  // Comment 1
  b,
  // Comment 2
c) {
  Wibble(a, b, c)
}
